--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum=1.0,minimum=1.0,user-scalable=0" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum=1.0,minimum=1.0,user-scalable=0"
+    />
 
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>ENGINE</title>
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   </head>
   <body>
     <div id="app"></div>
   </body>
-  <script>
-  </script>
+  <script></script>
 </html>
